[FIX] (website_)knowledge: fix various layout issues
Purpose:
--------
This commit includes various small layout fixes in knowledge:
- Add white space under the workspace section of the sidebar if this
section is empty (it was only done for portal users)
- Fix the icon layout for articles in public view (it was hiding the
article's first lines)
- Count published articles on which the user has been invited in the
knowledge articles entry of the user's "/my" page (it only counted
articles accessible by the user that were not published)

Task-3433622

closes odoo/enterprise#45346

X-original-commit: 7a8fde88122901bb1eb8af53100605a9b0d6b54f

--- a/knowledge/static/src/scss/knowledge_frontend.scss
+++ b/knowledge/static/src/scss/knowledge_frontend.scss
@@ -30,10 +30,12 @@
         margin-right: auto;
     }
     .o_knowledge_cover + .o_knowledge_icon {
-        margin-top: -70px;
+        margin-top: -20px;
     }
     .o_knowledge_icon {
+        margin-top: 40px;
         font-size: 80px;
+        height: 60px;
     }
 
     // = Resizer
